k8s/03-apps/platform-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-docs-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: <docs_url> # <-- URL de tu nueva app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: idp-docs-service
            port:
              number: 80
